content/docs/v1.7/configuration/agents/index.mdx
---
title: "Agents"
description: "Agent Mode allows running Drydock in a distributed manner across multiple Docker hosts."
---

import { Callout } from 'fumadocs-ui/components/callout';

The **Agent Mode** allows running drydock in a distributed manner.

- **Agent Node**: Runs near the Docker socket (or other container sources). It performs discovery and update checks.
- **Controller Node**: The central instance. It manages its own local watchers AND connects to remote Agents. It aggregates containers from Agents, and handles persistence, UI, and Notifications.

## Architecture

The Controller connects to one or more Agents via HTTP/HTTPS. The Agent pushes real-time updates (container changes, new versions found) to the Controller using Server-Sent Events (SSE).

<Callout type="info">**The controller dials out to each agent — the agent does not need to know where the controller is.** Only the controller side gets `DD_AGENT_{name}_HOST`. The agent just needs its port reachable from the controller. (Both ends share the same secret so they trust each other.)</Callout>

## Edge-agent dial-out (Portwing)

When an agent is behind NAT or a firewall and cannot accept inbound controller requests, Drydock accepts a Portwing edge-agent WebSocket instead. The endpoint is enabled by default. `DD_EXPERIMENTAL_PORTWING=false` is retained only as an emergency disable; no enable flag is required.

The WebSocket endpoint is `WS /api/v1/portwing/ws` (compatibility alias: `/api/portwing/ws`) and speaks `portwing/1.0`. Authentication uses Ed25519 public-key challenge-response, not the shared `DD_AGENT_SECRET` token. Register authorized agent keys through the authenticated API:

| Endpoint | Description |
| --- | --- |
| `GET /api/v1/portwing/keys` | List active and revoked edge-agent keys |
| `POST /api/v1/portwing/keys` | Register `{ "pubkeyBase64": "...", "label": "edge-nas" }`; the public key must decode to 32 raw Ed25519 bytes |
| `DELETE /api/v1/portwing/keys/:keyId` | Revoke a key and disconnect live sessions authenticated with it |

You can also preload keys at startup with `DD_PORTWING_AUTHORIZED_KEYS=/path/to/authorized_keys`. The file format is `ed25519 <base64-raw-pubkey> [comment]`, and the file must not be world-readable.

The controller owns each edge agent's container-refresh cadence and sends it in
the authenticated welcome frame:

| Env var | Required | Description | Default |
| :--- | :---: | :--- | :--- |
| `DD_PORTWING_POLL_INTERVAL` | ⚪ | Edge-agent container refresh interval in seconds | `300` |

Invalid, zero, or negative values fall back to the 300-second default. This is
separate from `DD_AGENT_{name}_*`, which configures controller-initiated Standard
Mode connections rather than Portwing dial-out sessions.

### Edge-agent example (Docker Compose)

A [Portwing](https://github.com/CodesWhat/portwing) edge agent runs on the remote/NAT'd host and dials out — no inbound ports need to be published on that side:

```yaml
services:
  portwing:
    image: ghcr.io/codeswhat/portwing:latest
    restart: unless-stopped
    volumes:
      # NOTE: :ro only read-protects the socket *file* — the agent still gets
      # the full Docker Engine API through it. It is not an API boundary; see
      # the warning below for the production setup.
      - /var/run/docker.sock:/var/run/docker.sock:ro
    environment:
      - DRYDOCK_URL=https://drydock.example.com
      - PRIVATE_KEY_FILE=/run/secrets/portwing_key
      - AGENT_NAME=edge-host-01
    secrets:
      - portwing_key

secrets:
  portwing_key:
    file: ./portwing_ed25519.pem
```

<Callout type="warn">This example bind-mounts the raw Docker socket into the Portwing container for brevity, and `:ro` is not a security boundary — it only prevents modifying the socket file itself, while every Docker Engine API operation (create, exec, delete) remains available through it. In production, front it with a socket filter instead — see the [sockguard tab](/docs/guides/security#isolate-the-docker-socket) of the Security Hardening Guide, and sockguard's [`examples/compose/tri-tool/`](https://github.com/CodesWhat/sockguard/tree/main/examples/compose/tri-tool) bundle for a runnable compose stack that fronts an Edge agent's Docker socket with sockguard instead of a raw bind mount.</Callout>

The Drydock controller needs the agent's public key registered before it connects. No additional Portwing setting is required unless you want to change the default poll cadence:

```yaml
services:
  drydock:
    image: codeswhat/drydock
    ports:
      - "3000:3000"
    environment:
      - DD_PORTWING_POLL_INTERVAL=60
```

Generate the agent's keypair with `portwing keygen -comment "edge-host-01"`, then register the printed public key with the controller (`POST /api/v1/portwing/keys`, or preload it via `DD_PORTWING_AUTHORIZED_KEYS`) before starting the agent — see the REST API table above.

<Callout type="info">Portwing's `portwing/1.0` wire protocol and key-registry API are stable under the published compatibility policy. Set `DD_EXPERIMENTAL_PORTWING=false` only when an emergency rollback requires disabling new edge connections.</Callout>

<Callout type="info">**Container logs work continuously over the authenticated edge tunnel.** Live viewers receive separate stdout/stderr chunks, may request timestamps, and cancel the upstream Docker stream when the viewer closes. Both ends enforce bounded queues so a stalled viewer or controller is disconnected instead of growing memory without limit. Older Portwing agents fall back to the bounded one-shot log response, so mixed-version fleets degrade gracefully.</Callout>

<Callout type="info">**Portwing Docker updates and lifecycle actions work in both connection modes with Drydock 1.6.0-rc.11+ and Portwing 0.9.0+.** When Portwing advertises a `docker` watcher whose configuration is exactly `transport=docker-api`, `execution=controller`, and `events=portwing`, Drydock runs its native registry checks, single/batch Docker updates, container start/stop/restart, update preview, and backup rollback controller-side. Docker API calls traverse Portwing over authenticated Standard HTTP or correlated Edge `request`/`response`/`stream` messages. Portwing remains the lifecycle-event source, so the controller does not open a duplicate Docker event stream. This transport registers the native `docker` action; it does not add a controller-side Docker Compose action.</Callout>

## Quickstart

A minimal two-host setup: one agent watching a remote host, one controller aggregating it.

**Agent** (on the remote host) — run drydock with `--agent`, give it a secret and a watcher:

```yaml
services:
  drydock-agent:
    image: codeswhat/drydock
    command: --agent
    ports:
      - "3000:3000"            # must be reachable from the controller
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock
    environment:
      - DD_AGENT_SECRET=pick-a-long-random-string
      - DD_WATCHER_LOCAL_SOCKET=/var/run/docker.sock
```

**Controller** — point at the agent's host with the **same** secret:

```yaml
services:
  drydock:
    image: codeswhat/drydock
    ports:
      - "3000:3000"
    environment:
      - DD_LOCAL_WATCHER=false                              # optional: pure aggregator, no local watcher
      - DD_AGENT_REMOTE1_HOST=192.168.1.50
      - DD_AGENT_REMOTE1_SECRET=pick-a-long-random-string   # must match the agent's DD_AGENT_SECRET
      - DD_AGENT_ALLOW_INSECURE_SECRET=true                 # plain-HTTP LAN only; see note below
```

That's the whole connection. The `{name}` segment (`REMOTE1`) is a label you choose. See [Controller Configuration](#controller-configuration) for naming rules. A working connection logs `Handshake successful. Received N containers.` on the controller. If it doesn't connect, see [Troubleshooting](#troubleshooting). The rest of this page covers the full option set.

This example talks to the agent over plain HTTP, so it sets `DD_AGENT_ALLOW_INSECURE_SECRET=true`. Without that flag (or TLS) the controller refuses to boot rather than send the secret in cleartext. On anything but a trusted LAN, configure TLS instead (see [Controller Environment Variables](#controller-environment-variables)).

## Agent Configuration

To run drydock in Agent mode, start the application with the `--agent` command line flag.

### Agent Environment Variables

| Env var | Required | Description | Default |
| :--- | :---: | :--- | :--- |
| `DD_AGENT_SECRET` | 🔴 | Secret token for authentication (must match Controller configuration) | |
| `DD_AGENT_SECRET_FILE` | ⚪ | Path to file containing the secret token | |
| `DD_SERVER_PORT` | ⚪ | Port to listen on | `3000` |
| `DD_SERVER_TLS_*` | ⚪ | Standard [Server](/docs/configuration/server) TLS options | |
| `DD_WATCHER_{name}_*` | 🔴 | [Watcher](/docs/configuration/watchers) configuration (At least one is required) | |
| `DD_ACTION_DOCKER_{name}_*` | ⚪ | [Docker trigger](/docs/configuration/triggers/docker) for container updates (required to update containers from UI/API) | |
| `DD_REGISTRY_{name}_*` | ⚪ | [Registry](/docs/configuration/registries) configuration (For update checks) | |

<Callout type="warn">**Watcher and trigger env vars use different naming patterns.** Watchers are `DD_WATCHER_{name}_{option}` (no provider segment — Docker is the only watcher type). Triggers are `DD_ACTION_DOCKER_{name}_{option}` (provider segment required). A common mistake is writing `DD_ACTION_DOCKER_PRUNE=true` (missing the name) — this creates a broken trigger named "prune" instead of a trigger with `PRUNE=true`. Use `DD_ACTION_DOCKER_{name}_PRUNE=true` instead.</Callout>

### Agent Example (Docker Compose)

<Callout type="info">This example uses a [socket proxy](/docs/configuration/watchers#option-1-socket-proxy-recommended) for secure Docker socket access. Agents also support [direct socket mount](/docs/configuration/watchers#option-4-direct-socket-mount-default) and [remote TLS](/docs/configuration/watchers#option-2-remote-docker-over-tls) connections.</Callout>

```yaml
services:
  drydock-socket-proxy:
    image: lscr.io/linuxserver/socket-proxy:latest
    container_name: drydock-socket-proxy
    restart: unless-stopped
    labels:
      - dd.watch=true
      - dd.update.mode=infrastructure
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock:ro
    environment:
      - CONTAINERS=1
      - IMAGES=1
      - EVENTS=1
      - INFO=1
      - POST=1
      - DELETE=1
      - NETWORKS=1
      - VOLUMES=1
    healthcheck:
      test: wget --spider http://localhost:2375/version || exit 1
      interval: 5s
      timeout: 3s
      retries: 3
      start_period: 5s

  drydock-agent:
    image: codeswhat/drydock
    command: --agent
    depends_on:
      drydock-socket-proxy:
        condition: service_healthy
    ports:
      - "3000:3000"
    environment:
      # Shared secret (must match controller's DD_AGENT_{name}_SECRET)
      - DD_AGENT_SECRET=mysecretkey
      # Watcher — discovers containers on this host
      - DD_WATCHER_LOCAL_HOST=drydock-socket-proxy
      - DD_WATCHER_LOCAL_PORT=2375
      # Docker trigger — allows updating containers from UI/API
      - DD_ACTION_DOCKER_LOCAL_PRUNE=true
```

## Controller Configuration

To connect a Controller to an Agent, use the `DD_AGENT_{name}_*` environment variables. The `{name}` segment is a label you choose to identify the agent (e.g. `REMOTE1`, `NAS`, `WORKER2`). It's stored lowercased by the config parser, so `DD_AGENT_REMOTE1_*` shows up as `remote1` in logs and the UI.

### Controller Environment Variables

| Env var | Required | Description | Default |
| :--- | :---: | :--- | :--- |
| `DD_AGENT_{name}_SECRET` | 🔴 | Secret token to authenticate with the Agent. Required in the default `token` auth mode; not used when `AUTHMODE=ed25519`. | |
| `DD_AGENT_{name}_SECRET__FILE` | ⚪ | Path to file containing the secret token. Note the **double** underscore, which follows the general [`DD_*__FILE`](/docs/configuration#secret-management) secret-file convention. | |
| `DD_AGENT_{name}_HOST` | 🔴 | Hostname or IP of the Agent | |
| `DD_AGENT_{name}_PORT` | ⚪ | Port of the Agent | `3000` |
| `DD_AGENT_{name}_AUTHMODE` | ⚪ | How the controller authenticates each request to this agent: `token` (sends the shared `X-Dd-Agent-Secret`) or `ed25519` (signs each request with an Ed25519 key using Portwing's per-request signature scheme). See [Ed25519 request signing](#ed25519-request-signing-standard-mode). | `token` |
| `DD_AGENT_{name}_SIGNINGKEYID` | 🔴¹ | **Required when `AUTHMODE=ed25519`.** The key id sent as the `X-Portwing-Key-ID` header — the 16-hex-char id Portwing derived from the public key at registration (`hex(SHA-256(pubkey)[:8])`). | |
| `DD_AGENT_{name}_SIGNINGKEY` | 🔴¹ | **Required when `AUTHMODE=ed25519`.** PEM-encoded PKCS#8 Ed25519 private key (the format Portwing's keygen produces). | |
| `DD_AGENT_{name}_SIGNINGKEY__FILE` | ⚪ | Path to a file containing the PEM Ed25519 private key, instead of inlining it. Note the **double** underscore, per the [secret-file convention](/docs/configuration#secret-management). | |
| `DD_AGENT_{name}_CAFILE` | ⚪ | CA certificate path for TLS connection | |
| `DD_AGENT_{name}_CERTFILE` | ⚪ | Client certificate path for TLS connection | |
| `DD_AGENT_{name}_KEYFILE` | ⚪ | Client key path for TLS connection | |
| `DD_AGENT_ALLOW_INSECURE_SECRET` | ⚪ | **Insecure.** When `true`, allows configuring agents with a `secret` over plain HTTP. Drydock will log a warning on every startup but won't refuse to boot. Only enable on trusted private networks where you accept that the agent secret is sent in cleartext. | `false` |

¹ Required only when `AUTHMODE=ed25519`; ignored otherwise.

If an agent's required config is missing, the controller logs a `Skipping agent {name}: …` warning and starts without that agent rather than failing to boot — `Missing host` when the host is absent, `Missing secret` in the default `token` mode, or `Missing signingkeyid or signingkey for ed25519 authmode` in `ed25519` mode. So a typo'd agent name shows up as a missing agent in the UI, not a startup crash. Check the controller log for `Skipping agent` warnings if an agent never appears.

<Callout type="warn">Setting `DD_AGENT_ALLOW_INSECURE_SECRET=true` means your agent secret is transmitted over the network in cleartext on every request. An attacker with network access can capture it and impersonate the controller. Prefer HTTPS (configure `DD_AGENT_{name}_CERTFILE`/`DD_AGENT_{name}_CAFILE`) or terminate TLS at a reverse proxy. Only use this flag on isolated private networks where you explicitly accept that risk.</Callout>

<Callout type="error">

**Without this flag set, a secret configured over plain HTTP is a hard startup error — the controller refuses to boot.** You'll see:

```text
Agent remote1 is configured with a secret over insecure HTTP (http://192.168.1.50:3000). Configure HTTPS (certfile/cafile) to protect X-Dd-Agent-Secret.
```

Fix it by configuring TLS (`DD_AGENT_{name}_CAFILE`/`CERTFILE`), terminating TLS at a reverse proxy, or — on a trusted LAN only — setting `DD_AGENT_ALLOW_INSECURE_SECRET=true` (which demotes the error to a one-time warning).

</Callout>

### Controller Example (Docker Compose)

```yaml
services:
  drydock-controller:
    image: codeswhat/drydock
    environment:
      - DD_AGENT_REMOTE1_HOST=192.168.1.50
      - DD_AGENT_REMOTE1_SECRET=mysecretkey
      - DD_AGENT_ALLOW_INSECURE_SECRET=true  # trusted LAN only, use TLS in production
    ports:
      - 3000:3000
```

<Callout type="info">By default, the controller also watches its own local Docker socket. If you're running the controller as a pure aggregator with no local containers to monitor, set `DD_LOCAL_WATCHER=false` to disable the default local watcher. On the next restart the controller drops the container records its own watchers used to own, so a container that has moved to an agent is reported by that agent instead of staying stuck on what the controller last saw. Anything set on those records from the UI travels with the container: a snooze, a maturity mode and skipped tags or digests are stashed under the container's Docker id and land on the agent's copy when it reports in.</Callout>

<Callout type="warning">This becomes required, not optional, if an agent watches the same daemon a controller-local watcher already watches: the controller's own socket, or a controller-local TCP watcher pointed at the agent's host. The controller's watcher wins every new container on that daemon, and the agent's report of it is refused with a warning logged once per scan cycle. Set `DD_LOCAL_WATCHER=false` on the controller and remove any `DD_WATCHER_LOCAL_*` keys from it, since an explicit local watcher registers whether or not the default one is disabled, or otherwise make sure only one side watches that daemon. If the controller-local watcher runs with `DD_WATCHER_{name}_WATCHEVENTS=false`, the controller only learns about new containers at its cron cadence, so a container created between scans on a shared daemon can be claimed by the agent until the controller's next scan, one more reason not to share a daemon.</Callout>

### Ed25519 request signing (standard-mode)

By default the controller authenticates to each agent with a shared secret token (the `X-Dd-Agent-Secret` header). Setting `DD_AGENT_{name}_AUTHMODE=ed25519` switches that agent to **per-request Ed25519 signing** instead. Every request carries five headers:

- `X-Portwing-Key-ID`
- `X-Portwing-Timestamp` (Unix seconds)
- `X-Portwing-Nonce`
- `X-Portwing-Signature` (base64url Ed25519 signature)
- `X-Portwing-Signature-Version: 2`

Signature version 2 signs `METHOD\nREQUEST-TARGET\nSHA-256-hex(body)\ntimestamp\nnonce`, where `REQUEST-TARGET` is the exact origin-form target placed on the wire: the escaped path plus `?` and the unmodified raw query when present. Percent escaping, query ordering, repeated parameters, and the raw body bytes are signature inputs and must not be decoded, normalized, or reordered. This matches [Portwing's verifier](/docs/api/portwing#standard-mode-ed25519-request-signing). No `X-Dd-Agent-Secret` is sent.

Use it when the remote agent verifies requests with a registered Ed25519 public key (Portwing's scheme) rather than a shared secret. Unlike a static token, a captured signature can't be replayed and there's no long-lived shared secret on the wire.

```yaml
services:
  drydock-controller:
    image: codeswhat/drydock
    environment:
      - DD_AGENT_EDGE_HOST=edge.example.com
      - DD_AGENT_EDGE_AUTHMODE=ed25519
      - DD_AGENT_EDGE_SIGNINGKEYID=3f8a1c2e9b047d56
      - DD_AGENT_EDGE_SIGNINGKEY__FILE=/run/secrets/agent_ed25519_key
    secrets:
      - agent_ed25519_key

secrets:
  agent_ed25519_key:
    file: ./agent_ed25519.pem
```

The signing key is parsed and validated once at startup. A missing `signingkeyid` or `signingkey` skips that agent with a warning and the controller keeps starting. A key that's present but malformed (invalid PEM, wrong key type) is not caught the same way: it throws while constructing that agent's client, and since nothing wraps agent initialization in a try/catch, it crashes the controller process instead of just skipping the one bad agent. Double-check the key file's contents before deploying it. The signing key is masked in configuration dumps the same way the secret token is.

<Callout type="info">The insecure-secret hard error above only applies to `token` mode. An `ed25519` agent transmits no secret, so it will connect over plain HTTP without `DD_AGENT_ALLOW_INSECURE_SECRET` — though HTTPS is still recommended to protect the request and response payloads themselves.</Callout>

## Complete Multi-Host Example

This example shows a controller watching its own containers and connecting to one remote agent. The controller handles notifications (Slack, SMTP, etc.); each agent handles its own container updates.

### Controller

```yaml
services:
  drydock:
    image: codeswhat/drydock
    ports:
      - "3000:3000"
    depends_on:
      drydock-socket-proxy:
        condition: service_healthy
    volumes:
      - /path/to/store:/store
    environment:
      # --- Local watcher (controller's own containers) ---
      - DD_WATCHER_LOCAL_HOST=drydock-socket-proxy
      - DD_WATCHER_LOCAL_PORT=2375
      - DD_WATCHER_LOCAL_WATCHBYDEFAULT=true

      # --- Local docker trigger (update controller's own containers) ---
      - DD_ACTION_DOCKER_LOCAL_PRUNE=true

      # --- Remote agent connection ---
      - DD_AGENT_REMOTE1_HOST=192.168.1.50
      - DD_AGENT_REMOTE1_PORT=3000
      - DD_AGENT_REMOTE1_SECRET=mysecretkey
      - DD_AGENT_ALLOW_INSECURE_SECRET=true  # trusted LAN only, use TLS in production

      # --- Notifications (run on controller only) ---
      - DD_NOTIFICATION_SMTP_ALERTS_HOST=smtp.example.com
      - DD_NOTIFICATION_SMTP_ALERTS_PORT=587
      - DD_NOTIFICATION_SMTP_ALERTS_USER=user@example.com
      - DD_NOTIFICATION_SMTP_ALERTS_PASS=password
      - DD_NOTIFICATION_SMTP_ALERTS_FROM=drydock@example.com
      - DD_NOTIFICATION_SMTP_ALERTS_TO=admin@example.com

  drydock-socket-proxy:
    image: lscr.io/linuxserver/socket-proxy:latest
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock:ro
    environment:
      - CONTAINERS=1
      - IMAGES=1
      - EVENTS=1
      - INFO=1
      - POST=1
      - DELETE=1
      - NETWORKS=1
      - VOLUMES=1
    healthcheck:
      test: wget --spider http://localhost:2375/version || exit 1
      interval: 5s
      timeout: 3s
      retries: 3
      start_period: 5s
```

### Agent (on 192.168.1.50)

```yaml
services:
  drydock-socket-proxy:
    image: lscr.io/linuxserver/socket-proxy:latest
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock:ro
    environment:
      - CONTAINERS=1
      - IMAGES=1
      - EVENTS=1
      - INFO=1
      - POST=1
      - DELETE=1
      - NETWORKS=1
      - VOLUMES=1
    healthcheck:
      test: wget --spider http://localhost:2375/version || exit 1
      interval: 5s
      timeout: 3s
      retries: 3
      start_period: 5s

  drydock-agent:
    image: codeswhat/drydock
    command: --agent
    depends_on:
      drydock-socket-proxy:
        condition: service_healthy
    ports:
      - "3000:3000"
    environment:
      # Must match controller's DD_AGENT_REMOTE1_SECRET
      - DD_AGENT_SECRET=mysecretkey
      # Watcher — discovers containers on this host
      - DD_WATCHER_LOCAL_HOST=drydock-socket-proxy
      - DD_WATCHER_LOCAL_PORT=2375
      # Docker trigger — required to update containers via UI/API
      - DD_ACTION_DOCKER_LOCAL_PRUNE=true
```

<Callout type="warn">**Do not configure notification triggers (Slack, SMTP, etc.) on agents.** Only `docker` and `dockercompose` triggers are supported in agent mode. Notification triggers must be configured on the controller.</Callout>

<Callout type="info">**You do not need to define `DD_ACTION_DOCKER_*` on the controller for each agent.** During the handshake, the controller automatically discovers the agent's triggers and creates internal proxies. The controller only needs its own `DD_ACTION_DOCKER_*` for updating containers on its local host.</Callout>

## Registries on agents

A traditional agent runs its own Docker watcher and does its own registry matching and update checks, it does not inherit the controller's registry configuration. Whatever registries the agent's containers are pulled from, that agent needs the matching `DD_REGISTRY_*` variables configured on itself, with the same values you'd use on a standalone instance.

<Callout type="warn">**Credentials are not pushed from the controller to agents.** If you configure `DD_REGISTRY_GITEA_PRIVATE_*` only on the controller, every agent-reported container that comes from that registry shows up as registry `unknown`, the agent never learned about it.</Callout>

The controller needs the same registry configured too, even though it isn't doing the matching for that agent's containers. The controller's UI links a container to its registry page, but that page is served from the controller's own registry configuration, if the controller was never given `DD_REGISTRY_GITEA_PRIVATE_*`, the link resolves to a registry the controller doesn't know about.

In short: for a registry used by an agent's containers, configure the same `DD_REGISTRY_{provider}_{name}_*` variables on **both** that agent and the controller.

**Agent**: needs the registry to do the matching and update check:

```yaml
services:
  drydock-agent:
    image: codeswhat/drydock
    command: --agent
    ports:
      - "3000:3000"
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock
      # Must be signed by the agent-ca.pem the controller mounts below, and valid for 192.168.1.50 (the host the controller dials)
      - ./certs/agent.pem:/certs/agent.pem:ro
      - ./certs/agent-key.pem:/certs/agent-key.pem:ro
    environment:
      - DD_AGENT_SECRET=pick-a-long-random-string
      - DD_WATCHER_LOCAL_SOCKET=/var/run/docker.sock
      - DD_SERVER_TLS_ENABLED=true
      - DD_SERVER_TLS_CERT=/certs/agent.pem
      - DD_SERVER_TLS_KEY=/certs/agent-key.pem
      - DD_REGISTRY_GITEA_PRIVATE_URL=https://git.example.com
      - DD_REGISTRY_GITEA_PRIVATE_LOGIN=john
      - DD_REGISTRY_GITEA_PRIVATE_PASSWORD=doe
```

**Controller**: needs the same registry so the container's registry link resolves:

```yaml
services:
  drydock:
    image: codeswhat/drydock
    ports:
      - "3000:3000"
    volumes:
      - ./certs/agent-ca.pem:/certs/agent-ca.pem:ro          # the CA that signed the agent's certificate
    environment:
      - DD_AGENT_REMOTE1_HOST=192.168.1.50
      - DD_AGENT_REMOTE1_SECRET=pick-a-long-random-string   # must match the agent's DD_AGENT_SECRET
      - DD_AGENT_REMOTE1_CAFILE=/certs/agent-ca.pem          # TLS to the agent; see Controller Environment Variables
      - DD_REGISTRY_GITEA_PRIVATE_URL=https://git.example.com
      - DD_REGISTRY_GITEA_PRIVATE_LOGIN=john
      - DD_REGISTRY_GITEA_PRIVATE_PASSWORD=doe
```

See the [Gitea registry](/docs/configuration/registries/gitea) page for the full variable list, including `AUTH`, `CAFILE`, `INSECURE`, and mTLS options.

## Reliability notes

### Transient enumeration failures

When the Docker watcher on an agent fails to enumerate containers (e.g. a brief socket-proxy hiccup or Docker daemon restart), the agent suppresses the snapshot emission rather than broadcasting an empty container list. The controller preserves the last-known container state instead of wiping it. The next successful cron cycle restores the accurate state.

### Container list payload

When the controller proxies an update to an agent, it posts to the agent-local `POST /api/triggers/{type}/{name}` route (or `…/batch` for batch updates). Agent-local routes are intentionally unversioned and authenticated with `X-Dd-Agent-Secret`; controller API clients should continue to use the canonical `/api/v1/*` routes. For single-update calls on `docker` and `dockercompose` triggers the controller sends only `{ id, name }` (plus an `operationId` when one is in flight) rather than the full container object, which prevents HTTP 413 errors where full payloads exceeded the agent's 256 KB body cap. Batch update calls (`…/batch`) still send the full container per item, so a very large fleet updated in one batch can still approach that cap.

Portwing 0.9.0's controller-owned Docker transport does not use those legacy watcher/trigger POST routes. The exact `transport=docker-api`, `execution=controller`, `events=portwing` marker causes Drydock to start its native Docker watcher and update action against a loopback-only, random bearer-authenticated bridge. That bridge forwards Docker API calls through the agent client's existing authentication: Standard HTTP (token or Ed25519 signature version 2) or Edge correlated `request`/`response`/`stream` transport.

Because registry enrichment is controller-owned on this path, later Portwing inventory commonly carries the raw defaults `updateAvailable=false` and `updateKind=unknown`. Drydock preserves its stored `result`, update status, policy, security, rollback, and operation fields instead of allowing those raw defaults to erase a controller-enriched result. Portwing's lifecycle events remain authoritative; the delegated native watcher runs with its own Docker event subscription disabled to avoid duplicate streams.

The [Registry lookup image](/docs/configuration/registries#registry-lookup-image-ddregistrylookupimage) label (`dd.registry.lookup.image`, or its legacy alias `dd.registry.lookup.url`) is also honored for containers reported over this path, with `dd.registry.lookup.image` taking precedence when both are set. A `lookupImage` the agent already reported is never overwritten.

## Features in Agent Mode

- **Watchers**: Traditional agents run watchers locally. A Portwing 0.9.0 watcher with the exact controller-transport marker runs Drydock's native Docker watcher on the Controller through Portwing.
- **Registries**: Traditional agents perform their configured checks locally; marked Portwing watchers use the Controller's native registry configuration and enrichment.
- **Triggers**:
  - Traditional-agent `docker` and `dockercompose` triggers are configured and executed **on the Agent**, with the controller proxying update requests to it.
  - A marked Portwing watcher automatically receives a controller-owned native `docker` action. Single/batch updates, start/stop/restart, update preview, and backup rollback work over Standard or Edge transport; Docker Compose is not part of this marker contract.
  - Notification triggers (e.g. `smtp`, `discord`) are configured and executed **on the Controller**. Notifications automatically include a `[server-name]` prefix identifying which server each update comes from. The controller name defaults to the detected Docker or Podman daemon host name when available, then the process hostname, and can be overridden with `DD_SERVER_NAME`.

## Troubleshooting

Agent connections are driven entirely from the controller, so the controller log (`docker logs <controller>`) is where you diagnose them. The controller retries with exponential backoff (up to 60s between attempts), so a failing connection repeats in the log until the agent is healthy.

| What you see on the controller | What it means | Fix |
| :--- | :--- | :--- |
| `Connecting to agent remote1 at http://…:3000` then `Handshake successful. Received N containers.` | Connected and working | — |
| Startup `Error: Agent remote1 is configured with a secret over insecure HTTP …` | A secret is set but the agent is plain HTTP | Configure TLS, or set `DD_AGENT_ALLOW_INSECURE_SECRET=true` on a trusted LAN |
| `SSE Connection failed: Request failed with status code 401. Retrying...` | The secrets don't match | Make `DD_AGENT_{name}_SECRET` (controller) equal `DD_AGENT_SECRET` (agent) |
| `SSE Connection failed: connect ECONNREFUSED 192.168.1.50:3000. Retrying...` | Agent unreachable — not running, crashed at boot, or its port isn't published/reachable | Check `docker logs <agent>` (see below), confirm its `ports:` are published, and check firewalls |
| `SSE Connection failed: connect ETIMEDOUT 192.168.1.50:3000. Retrying...` | A firewall or NAT is blocking the path | Open the path from controller to agent, or check NAT |
| Repeated `401`s against an agent that *looks* like it's running | The agent container was started **without** `command: --agent`, so it's running as a controller and never validated the secret | Add `command: --agent` to the agent service |

`ECONNREFUSED` only tells you the agent isn't answering, not why, so check `docker logs <agent>`. The agent throws and exits at boot in two cases: neither `DD_AGENT_SECRET` nor `DD_AGENT_SECRET_FILE` is set, or no watcher is configured (it logs `Agent mode requires at least one watcher configured.`). Add the missing secret or a `DD_WATCHER_*` (e.g. `DD_WATCHER_LOCAL_SOCKET=/var/run/docker.sock`) and restart.

The agent also exposes an unauthenticated `GET /health` on its port: it returns `200` once at least one watcher is registered, or `503` with `{"status":"unhealthy","reason":"no watchers registered"}` otherwise. Use it for a compose `healthcheck` or an uptime probe.

Still stuck? Set `DD_LOG_LEVEL=debug` on the controller for the full `agent-client` handshake trace, and open a [Q&A discussion](https://github.com/CodesWhat/drydock/discussions) with those lines.
